[gd_scene load_steps=4 format=3 uid="uid://brc78pcm5b5fm"]

[ext_resource type="LabelSettings" uid="uid://dm4pjcmlp87at" path="res://resources/galaxy_defiance/fonts/title.label_settings.tres" id="1_g1i4x"]
[ext_resource type="Script" path="res://assets/ui/game_over/game_over.gd" id="1_h7blj"]
[ext_resource type="LabelSettings" uid="uid://bcfrxwrsv2co4" path="res://resources/galaxy_defiance/fonts/default.label_settings.tres" id="2_od8po"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h7blj")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = ExtResource("1_g1i4x")
horizontal_alignment = 1

[node name="HighScore" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/HighScore"]
layout_mode = 2
text = "Highscore:"
label_settings = ExtResource("2_od8po")
horizontal_alignment = 2

[node name="HighScoreValueLabel" type="Label" parent="CenterContainer/VBoxContainer/HighScore"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("2_od8po")
horizontal_alignment = 2

[node name="Score" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/Score"]
layout_mode = 2
text = "Score:"
label_settings = ExtResource("2_od8po")

[node name="ScoreValueLabel" type="Label" parent="CenterContainer/VBoxContainer/Score"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("2_od8po")
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RetryLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press to retry"
label_settings = ExtResource("2_od8po")
horizontal_alignment = 1
